<resources>
    <string name="app_name">EnigmaApp</string>

    
    <string name="kep">Kép</string>
    <string name="jatek">Játék</string>


    <string name="enigma">ENIGMA</string>

    <string name="kozepiskola">Középiskola</string>
    <string name="oktato_anyag">Oktatóanyag</string>
    <string name="oktatoanyag">Oktató</string>
    <string name="altalanos">Általános Iskola</string>
    <string name="elso_osztaly">1. Osztály</string>
    <string name="masodik_osztaly">2. Osztály</string>
    <string name="harmadik_osztaly">3. Osztály</string>
    <string name="negyedik_osztaly">4. Osztály</string>
    <string name="otodik_osztaly">5. Osztály</string>
    <string name="hatodik_osztaly">6. Osztály</string>
    <string name="hetedik_osztaly">7. Osztály</string>
    <string name="nyolcadik_osztaly">8. Osztály</string>
    <string name="kozep">Középiskola</string>

    <string name="kozep_iskola_masodik">10. Osztály</string>
    <string name="kozep_iskola_elso">9. Osztály</string>
    <string name="kozep_iskola_harmadik">11. Osztály</string>
    <string name="kozep_iskola_negyedik">12. Osztály</string>
    <string name="kisokos">Kisokos</string>
    <string name="tesztek">TESZTEK</string>
    <string name="altalanos_tesztek">Tesztek</string>
    <string name="pontszam">Pontszám</string>


    <string name="kilepes">Kilépés</string>
    <string name="szunet" />
    <string name="kisokoska">Kisokos</string>
    <string name="nulla">0</string>
    <string name="kerdes" />
    <string name="choise1" />
    <string name="choise2" />
    <string name="choice1" />
    <string name="choice2" />
    <string name="choice3" />
    <string name="nullaval" />
    <string name="keplet_tar">Matematikai Képlettár</string>
    <string name="szamhalmazok">Számhalmazok</string>
    <string name="szamelmelet">Számelmélet</string>
    <string name="binominalis">Binominális tétel</string>
    <string name="kombinatorika">Kombinatorika</string>
    <string name="halmazok">Halmazok</string>
    <string name="logika">Logika</string>
    <string name="grafok">Gráfok</string>
    <string name="polinomok">Polinomok</string>
    <string name="sorozatok">Sorozatok</string>

    <string name="logaritmus">Logaritmus</string>
    <string name="hatvanyozas">Hatványozás</string>

    <string name="egyenletek">Egyenletek</string>

    <string name="keplettar2">Matematikai Képlettár</string>
    <string name="gyokvonas">Gyökvonás</string>
    <string name="komplex">Komplex számok</string>
    <string name="trigonometria">Trigonometria</string>
    <string name="sikidomok">Síkidomok</string>
    <string name="testek">Testek</string>
    <string name="derivalas">Deriválás</string>
    <string name="integralas">Integrálás</string>
    <string name="valoszinuseg">Valószínűség számítás</string>
    <string name="kovetkezo_oldal">Következő oldal</string>
    <string name="keplet">Matematikai Képlettár</string>
    <string name="nevezetes">Nevezetes Függvények</string>
    <string name="question_elso">Mi a a kérdés?</string>
    <string name="valasz_elso">OPTION 1</string>
    <string name="valsz_masodik">OPTION 2</string>
    <string name="valsz_harmadik">OPTION 3</string>
    <string name="ido">00:00</string>
    <string name="button1">Button</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="button4">Button</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="teszt2">Teszt</string>
    <string name="teszt">Teszt</string>


</resources>

