<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:background="#5eacff"
    tools:context=".tesztek.Kozepiskola_tesztek.Kilencedik_osztaly_teszt">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#12110f"
        android:textSize="20sp"
        android:textColor="#fffcf4"
        android:id="@+id/answer4"
        android:text="@string/button1"
        />

    <Button
        android:id="@+id/answer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/answer4"
        android:layout_marginBottom="29dp"
        android:background="#12110f"
        android:text="@string/button2"
        android:textColor="#fffcf4"
        android:textSize="20sp" />

    <Button
        android:id="@+id/answer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/answer3"
        android:layout_marginBottom="29dp"
        android:background="#12110f"
        android:text="@string/button3"
        android:textColor="#fffcf4"
        android:textSize="20sp" />

    <Button
        android:id="@+id/answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/answer2"
        android:layout_marginBottom="29dp"
        android:background="#12110f"
        android:text="@string/button4"
        android:textColor="#fffcf4"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="37dp"
        android:gravity="left"
        android:text="@string/textview1"
        android:textColor="#b00e0e"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_below="@id/score"
        android:textColor="#fffcf4"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/answer1"
        android:text="@string/textview2" />
</RelativeLayout>